kube_nwhcp-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nwhcp
  name: nwhcp-gateway--deployment ## should be unique
spec:
  selector:
    matchLabels:
      app: nwhcp-gateway--app ## match with service
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: nwhcp-gateway--app ## match with service
    spec:
      nodeSelector:
        arch: arm64
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: nwhcp-gateway--docker ## should be unique
          image: registry.gitlab.com/loibucket/nwhcp-server/nwhcp-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80 ## match localhost port
              name: http
          resources:
            requests:
              memory: "10Mi"
              cpu: "10m"
            limits:
              memory: "200Mi"
              cpu: "200m"
      affinity:
        podAntiAffinity: ## spread pods across nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nwhcp-gateway
              topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  namespace: nwhcp
  name: nwhcp-gateway--service ## should be unique
spec:
  selector:
    app: nwhcp-gateway--app ## match with service
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nwhcp
  name: nwhcp-gateway--ingress-tls
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - nwhcp.tk
        - test.nwhcp.tk
      secretName: nwhcp-tls
  rules:
    - host: nwhcp.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nwhcp-gateway--service
                port:
                  number: 80
    - host: test.nwhcp.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nwhcp-gateway--service
                port:
                  number: 80
